[package]
name = "whimsy"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve", "diesel_sqlite_pool"]

[dependencies.google-signin]
rev = "d4c8714a3e36f220a6e49655487daf7d89494d3d"
git = "https://github.com/wyyerd/google-signin-rs"
