[package]
name = "whimsy"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "whimsy"
path = "src/lib.rs"

[dependencies]
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", features = ["freeze-stdlib"] }
rustpython-compiler = { git = "https://github.com/RustPython/RustPython.git" }
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver.git", features = ["web-sys"] }
fxhash = "0.2.1"
wasm-bindgen = { version = "0.2.58", features = [ "serde-serialize" ] }
mint = "0.5.4"
log = "0.4.8"
js-sys = "0.3.35"
[dependencies.web-sys]
version = "0.3.35"
features = [ "EventTarget", "CustomEvent" ]
